Prevent text from overlapping image on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,6 +283,7 @@ hr {
     margin-top: 40px;
     margin-bottom: 10px;
     margin-right: 20px;
+    margin-left: 145px;
     font-weight: 800;
     text-shadow: 2px 2px #000;
 }
